# itunes-iap

./: .gitignore  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  codecov.yml  dist.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  environment.rst  index.rst  quick.rst  receipt.rst  request.rst
itunesiap/: .gitignore  __init__.py  core.py  environment.py  exceptions.py  legacy.py  receipt.py  request.py  shortcut.py  tests.py  tools.py  utils.py  verify_aiohttp.py  verify_requests.py
itunesiaptests/: .gitignore  test_regression.py  testdata.py
tests/: __init__.py  aiohttp_test.py  aiohttp_test_py34.py  aiohttp_test_py35.py  conftest.py  deprecated_test.py  itunesiap_test.py  legacy_test.py  receipt_test.py  test_itunesiap.py  v2_test.py
tests/fixtures/: invalid_receipt_data.yaml  verified_receipt.yaml
