[metadata]
name = itunes-iap
version = 2.6.0
url = https://github.com/youknowone/itunes-iap
author = Jeong YunWon
author_email = itunesiap@youknowone.org
classifier =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = BSD 2-Clause License
license_file = LICENSE
description = 'Apple iTunes In-app purchase verification api.'
long_description = file: README.rst
keywords = itunes,iap,in-app-purchase,apple,in app purchase,asyncio
[options]
packages = itunesiap
install_requires=
    requests>=2.18.4
    requests[security]>=2.18.4;python_version<"3.6"
    prettyexc>=0.6.0
    six>=1.10.0
    python-dateutil>=2.6.1
    pytz
    aiohttp>=3.0.9;python_version>="3.5"
    aiodns>=1.1.1;python_version>="3.5"
[options.extras_require]
test =
    pytest==5.2.2;python_version>="3.5"
    pytest>=4.6.7;python_version<"3.5"
    pytest-cov>=2.6.1
    pytest-lazy-fixture==0.5.1
    tox
    mock
    patch
    attrs==18.2.0
    pytest-asyncio;python_version>="3.5"
doc =
    sphinx
[tool:pytest]
addopts = --verbose --cov itunesiap
python_files = tests/*test.py
norecursedirs = .git py ci
[flake8]
ignore = E501
